# deia

./: .gitignore  .test_websocket.py  BACKLOG.md  BOK_MOVED.md  BUG_REPORTS.md  COMMUNITY_AND_FUNDING_PLAN.md  CONTRIBUTING.md  Claude-Decisions.md  DEIA_ACTUAL_TIMELINE.md  DEIA_ASSESSMENT.md  EXEC_SUMMARY.md  IDEA_METHOD.md  MULTI-AGENT-ARCHITECTURE.md  MULTI_DOMAIN_VISION.md  PRINCIPLES.md  QUICKSTART.md  README.md  README_OLD.md  REORGANIZATION_PLAN.md  ROADMAP.md  THE_COMPLETE_PLAN.md  UAT-TEST-PLAN.md  coverage.json  deia_project_inventory.md  launch-bot-002.ps1  launch_platform.py  project-scanner.py  project_resume.md  pyproject.toml  pytest.ini  run_bots.py  run_single_bot.py  spawn_hive.py  test_adapter.py  test_adapter_quick.py
.claude/: INSTRUCTIONS.md  REPO_INDEX.md  STARTUP_CHECKLIST.md  settings.local.json
.claude/.claude/: settings.local.json
.claude/commands/: log.md  save-for-vendor.md
.deia/: ACCOMPLISHMENTS.md  AGENTS.md  AUTOLOG_DEFINITIONS.md  AUTOLOG_SYSTEM_V2.md  BLUEPRINT-flappy-bird-full-sdlc.md  CLAUDE-CODE-CLI-DEBUGGING-REPORT.md  CLAUDE_CODE_FAILURES.md  CONTINUITY-OF-OPERATIONS-PLAN.md  DAVE-MUST-REVIEW.md  DEBUG-TRAIL-BOT-COMMUNICATION-FAILURES-2025-10-28.md  DEBUG-TRAIL-CLAUDE-CODE-CLI-LAUNCH.md  DISCREPANCY-REPORT.md  DOCUMENTATION-CRISIS-RESOLUTION.md  DOCUMENTATION-SURVEY-COMPLETION-2025-11-14.md  DRONE-START.md  EGG-WITH-BOOTSTRAP.md  MONITOR.txt  PROCESS-INDEX.md  Q33N-QUEEN-ONBOARDING.md  QUEEN-WORKPLAN-distributed-carbon-economy.md  README.md  SCENARIO-PROCESS-MAPPING.md  SESSION-PICKUP-GUIDE.md  STATUS-LLH-FACTORY-EGG.md  TESTING-PROTOCOL.md  WHAT-WE-ACTUALLY-BUILT.md  WORKER-PROTOCOL.md  backlog.json  backlog.md  bot-queue-service-guide.md  bot-status-board.json  chat_history.db  flappy-bird-ai-research-proposal.md  flappy-bird-game-b-README.md  flappy-bird-technical-design.md  flappy-bird-test-plan.md  flappy-gerald.html  hive-coordination-rules.md  hive-recipe.json  old-start-here.md  (+2 more)
.deia/.claude/: settings.local.json
.deia/BUG-REPORTS/: BUG-CLAUDE-CODE-CLI-LAUNCH-FAILURE.md  BUG-Q33N-ASKED-INSTEAD-OF-LOOKED-2025-11-28.md  BUG-Q33N-FAILED-TO-EMAIL-DEPLOY-2025-11-28.md
.deia/analytics/: DEIA_Analytics_Explorer.ipynb  config.json  notebook_bootstrap.py
.deia/archives/: REQUEST-2025-10-15-llh-builder-cleanup.md
.deia/bot-logs/: BEE-000-activity.jsonl  BEE-001A-activity.jsonl  BEE-002A-activity.jsonl  BEE-003A-activity.jsonl  BOT-00001-activity.jsonl  BOT-00002-activity.jsonl  BOT-00003-activity.jsonl  BOT-00004-activity.jsonl  BOT-00005-activity.jsonl  BOT-BOT-001-activity.jsonl  BOT-BOT-001-errors.jsonl  BOT-BOT-002-activity.jsonl  BOT-BOT-002-errors.jsonl  BOT-BOT-002-stats.json  BOT-BOT-009-activity.jsonl  BOT-BOT-009-errors.jsonl  BOT-BOT-009-stats.json  BOT-BOT-222-activity.jsonl  BOT-BOT-222-errors.jsonl  BOT-BOT-444-activity.jsonl  BOT-BOT-444-errors.jsonl  BOT-BOT-444-stats.json  BOT-BOT-445-activity.jsonl  BOT-BOT-445-errors.jsonl  BOT-BOT-445-stats.json  BOT-BOT-446-activity.jsonl  BOT-BOT-446-errors.jsonl  BOT-BOT-999-activity.jsonl  (+41 more)
.git-rewrite/: backup-refs  commit  index  message  parse  raw-refs  revs  tree-state
.private/: README.md
New folder/: 2025-10-19_ADDENDUM-corrections-from-file-search.md  2025-10-19_comprehensive-inventory-claude.md  2025-10-19_inventory.md  linkedin-simdecisions-article.md
bok/: README.md
claude/: .gitignore  CONSTITUTION_V2_DRAFT.md  DEFERRED_AMENDMENTS.md  DRAFT_ANTHROPIC_EMAIL.md  OSTROM_ALIGNMENT.md  README.md  RESUME_INSTRUCTIONS.md  SANITIZATION_GUIDE.md  pyproject.toml
claude/devlogs/bok/: readme.txt
claude/devlogs/intake/: session_2025-10-05_initial-setup.md
claude/devlogs/logdump/: readme.txt
claude/devlogs/reviewed/: read_me.txt
claude/devlogs/wisdom/: read_me.txt
claude/src/deia/: bok.py  config.py  sanitizer.py
deia_raqcoon/: README.md  __init__.py  run-local-hive.bat
docs/: BOT-004-CODE-PRIORITY-SEQUENCE.md  BOT-004-COMPLETE-CODE.md  BOT-004-PHASE-1-HANDOFF.md  COMPLIANCE-CHECKLIST.md  COMPONENT-LIBRARY.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-PROCEDURES.md  IMPLEMENTATION_PLAN.md  INCIDENT-RESPONSE-PLAYBOOKS.md  MONITORING-API-REFERENCE.md  MONITORING-SETUP.md  PRODUCTION-ARCHITECTURE-VALIDATION.md  PRODUCTION-INTEGRATION-VALIDATION.md  README-DEPLOYMENT.md  REPOT.md  SECURITY-CHECKLIST.md  SUBMISSION_WORKFLOW.md  SUBMISSION_WORKFLOW_AUDIT.md  chat-file-operations.md  conversation-logging.md  downloads-monitor-phase1.md  features-deployment.md  library-feedback.md  phase-2-walkthrough.md  rebel-snail-mail-reflections_20251012_004818.md  test-routing.md
examples/: cli_bot_runner_example.py
llama-chatbot/: IMPROVEMENTS.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  README_SERVICE.md  ROADMAP_SUMMARY.md  STATUS.md  app.py  ollama_service.py  restart.bat  stop.bat
templates/: pattern-template.md
tests/: README.md  conftest.py  test_bot_queue.py  test_cli_adapter.py
website/: config.yaml
(+2671 files in other folders)
